--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "prettier": "yarn prettier --write src/**/*.{ts,tsx}",
     "preview": "vite preview"
   },
   "dependencies": {
