--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-router-dom": "6.13.0",
-    "styled-components": "6.0.0-rc.6"
+    "styled-components": "6.0.0-rc.6",
+    "vite-plugin-svgr": "^3.2.0"
   },
   "devDependencies": {
     "@tanstack/react-query-devtools": "4.29.15",
