--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "jotai": "2.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "6.13.0",
-    "styled-components": "6.0.0-rc.6"
+    "styled-components": "6.0.0-rc.6",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "@tanstack/react-query-devtools": "4.29.15",
