--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
     "jotai": "2.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-responsive-carousel": "^3.2.23",
+    "react-error-boundary": "4.0.10",
+    "react-responsive-carousel": "3.2.23",
     "react-router-dom": "6.13.0",
     "styled-components": "6.0.0-rc.6",
-    "vite-plugin-svgr": "^3.2.0"
+    "vite-plugin-svgr": "3.2.0"
   },
   "devDependencies": {
     "@tanstack/react-query-devtools": "4.29.15",
@@ -34,6 +35,7 @@
     "eslint-plugin-react-hooks": "4.6.0",
     "eslint-plugin-react-refresh": "0.3.4",
     "prettier": "2.8.8",
+    "styled-reset": "^4.4.7",
     "typescript": "5.0.2",
     "vite": "4.3.9"
   }
