feat: 랜딩 페이지 퍼블리싱 완료

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,7 @@
     "baseUrl": ".",
     "paths": {
       "@/apis/*": ["./src/apis/*"],
-      "@/app/*": ["./src/app/*"],
+      "@/assets/*": ["./src/assets/*"],
       "@/components/*": ["./src/components/*"],
       "@/constants/*": ["./src/constants/*"],
       "@/hooks/*": ["./src/hooks/*"],
