--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "@tanstack/react-query": "4.29.15",
     "axios": "1.4.0",
     "jotai": "2.2.1",
+    "lottie-react": "2.4.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-error-boundary": "4.0.10",
-    "react-responsive-carousel": "3.2.23",
     "react-router-dom": "6.13.0",
     "styled-components": "6.0.0-rc.6",
     "vite-plugin-svgr": "3.2.0"
