--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "18.2.0",
     "react-error-boundary": "4.0.10",
     "react-router-dom": "6.13.0",
+    "react-toastify": "9.1.3",
     "styled-components": "6.0.0-rc.6",
     "vite-plugin-svgr": "3.2.0"
   },
