Revert "[feat] 홈화면 구성  (#21)"
This reverts commit 0e8e8ea1fcabc7700a8a41e03bb2c375f68d43f9.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,7 @@
     "paths": {
       "@/apis/*": ["./src/apis/*"],
       "@/app/*": ["./src/app/*"],
-      "@/components/*": ["./src/components/*"],
+      "@/components/*": ["src/components/*"],
       "@/constants/*": ["./src/constants/*"],
       "@/hooks/*": ["./src/hooks/*"],
       "@/stores/*": ["./src/stores/*"],
